# alphago-zero-jackal

./: .gitignore  CMakeLists.txt  README.md  jackal_config.json  jackal_config_test.json  train_opt.py
src/: alphago_zero.cpp  jackal_model_test.cpp  jackal_self_play.cpp  jackal_simple_self_play.cpp  jackal_train.cpp
src/jackal/: action.h  game_element.cpp  game_element.h  game_model.cpp  game_model.h  ground.cpp  ground.h  jackal.cpp  jackal.h  jackal_train.h  player.cpp  player.h  sprite.cpp  sprite.h
src/mcts/: mcts.cpp  mcts.h
src/rl/: model.h  play.cpp  play.h  self_play.cpp  self_play.h  train.cpp  train.h
src/tictactoe/: tictactoe.cpp  tictactoe.h  tictactoe_model.h  tictactoe_train.h
src/util/: utils.cpp  utils.h
tests/: ground_test.cpp  helpers.cpp  helpers.h  jackal_model_test.cpp  jackal_test.cpp  mcts_test.cpp  player_test.cpp  self_play_dataset.cpp  tictactoe_test.cpp  util_test.cpp
tests/disabled/: tictactoe_test.cpp
